blue/os_compat/rt_thread/bindings.rs

#[doc = " Mailbox raw structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_mailbox {
    #[doc = " Inherit from IPCObject"]
    pub parent: rt_ipc_object,
    #[doc = " Message pool buffer of mailbox"]
    pub msg_pool: *mut rt_uint8_t,
    #[doc = " Message pool buffer size"]
    pub size: rt_uint16_t,
    #[doc = " Index of messages in message pool"]
    pub entry: rt_uint16_t,
    #[doc = " Input offset of the message buffer"]
    pub in_offset: rt_uint16_t,
    #[doc = " Output offset of the message buffer"]
    pub out_offset: rt_uint16_t,
    #[doc = " Sender thread suspended on this mailbox"]
    pub suspend_sender_thread: rt_list_t,
}
#[test]
fn bindgen_test_layout_rt_mailbox() {
    const UNINIT: ::core::mem::MaybeUninit<rt_mailbox> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_mailbox>(),
        60usize,
        concat!("Size of: ", stringify!(rt_mailbox))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_mailbox>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_mailbox))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mailbox),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).msg_pool) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mailbox),
            "::",
            stringify!(msg_pool)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).size) as usize - ptr as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mailbox),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).entry) as usize - ptr as usize },
        46usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mailbox),
            "::",
            stringify!(entry)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).in_offset) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mailbox),
            "::",
            stringify!(in_offset)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).out_offset) as usize - ptr as usize },
        50usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mailbox),
            "::",
            stringify!(out_offset)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).suspend_sender_thread) as usize - ptr as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mailbox),
            "::",
            stringify!(suspend_sender_thread)
        )
    );
}
#[doc = " MessageQueue raw structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_messagequeue {
    #[doc = " Inherit from IPCObject"]
    pub parent: rt_ipc_object,
    #[doc = " Start address of message queue"]
    pub msg_pool: *mut rt_uint8_t,
    #[doc = " Message size of each message"]
    pub msg_size: rt_uint16_t,
    #[doc = " Max number of messages"]
    pub max_msgs: rt_uint16_t,
    #[doc = " Index of messages in the queue"]
    pub entry: rt_uint16_t,
    #[doc = " List head"]
    pub msg_queue_head: *mut rt_uint8_t,
    #[doc = " List tail"]
    pub msg_queue_tail: *mut rt_uint8_t,
    #[doc = " Pointer indicated the free node of queue"]
    pub msg_queue_free: *mut rt_uint8_t,
    #[doc = " Sender thread suspended on this message queue"]
    pub suspend_sender_thread: rt_list_t,
}
#[test]
fn bindgen_test_layout_rt_messagequeue() {
    const UNINIT: ::core::mem::MaybeUninit<rt_messagequeue> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_messagequeue>(),
        72usize,
        concat!("Size of: ", stringify!(rt_messagequeue))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_messagequeue>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_messagequeue))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).msg_pool) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(msg_pool)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).msg_size) as usize - ptr as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(msg_size)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).max_msgs) as usize - ptr as usize },
        46usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(max_msgs)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).entry) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(entry)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).msg_queue_head) as usize - ptr as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(msg_queue_head)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).msg_queue_tail) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(msg_queue_tail)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).msg_queue_free) as usize - ptr as usize },
        60usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(msg_queue_free)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).suspend_sender_thread) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(suspend_sender_thread)
        )
    );
}
#[doc = " Semaphore raw structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_semaphore {
    #[doc = " Inherit from IPCObject"]
    pub parent: rt_ipc_object,
    #[doc = " Value of semaphore"]
    pub value: rt_uint16_t,
}
#[test]
fn bindgen_test_layout_rt_semaphore() {
    const UNINIT: ::core::mem::MaybeUninit<rt_semaphore> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_semaphore>(),
        44usize,
        concat!("Size of: ", stringify!(rt_semaphore))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_semaphore>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_semaphore))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_semaphore),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).value) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_semaphore),
            "::",
            stringify!(value)
        )
    );
}
pub type rt_object_t = *mut rt_object;
pub type rt_timer_t = *mut rt_timer;
pub const RT_INTERRUPTIBLE: _bindgen_ty_1 = 0;
pub const RT_KILLABLE: _bindgen_ty_1 = 1;
pub const RT_UNINTERRUPTIBLE: _bindgen_ty_1 = 2;
pub type _bindgen_ty_1 = core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_cpu {
    _unused: [u8; 0],
}
pub type rt_thread_cleanup_t = ::core::option::Option<unsafe extern "C" fn(tid: *mut rt_thread)>;
pub type rt_thread_t = *mut rt_thread;
pub type rt_sem_t = *mut rt_semaphore;
pub type rt_mutex_t = *mut rt_mutex;
pub type rt_event_t = *mut rt_event;
pub type rt_mailbox_t = *mut rt_mailbox;
pub type rt_mq_t = *mut rt_messagequeue;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_memory {
    #[doc = "< inherit from rt_object"]
    pub parent: rt_object,
    #[doc = "< Memory management algorithm name"]
    pub algorithm: *const core::ffi::c_char,
    #[doc = "< memory start address"]
    pub address: rt_ubase_t,
    #[doc = "< memory size"]
    pub total: rt_size_t,
    #[doc = "< size used"]
    pub used: rt_size_t,
    #[doc = "< maximum usage"]
    pub max: rt_size_t,
}
#[test]
fn bindgen_test_layout_rt_memory() {
    const UNINIT: ::core::mem::MaybeUninit<rt_memory> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_memory>(),
        40usize,
        concat!("Size of: ", stringify!(rt_memory))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_memory>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_memory))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).algorithm) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(algorithm)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).address) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(address)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).total) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(total)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).used) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(used)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).max) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(max)
        )
    );
}
